feat(analyzers): add read-only protocol replay